# LCR_Meter

./: .gitignore  IV.ipynb  LICENSE.txt  output_voltage.py  puzzle.py  range.py  range_calcs.ipynb  readme.md  stability_analysis.py  transimpedance_amp.ipynb
ADC/ecad/: ADC.kicad_pro  ADC.kicad_sch
algorithm/: .measure.py.swp  IV_ratio.py  current.txt  digit.c  get_codes.py  impedance_range.py  measure.py  range.py  range_plot.py  stray_capacitance.py  voltage.txt
assembly/: BOM.csv  price.py
ecad/: #auto_saved_files#  LC_meter.csv  LC_meter.kicad_pcb  LC_meter.kicad_pro  LC_meter.kicad_sch  LC_meter.xml  analog_front_end.kicad_sch  fp-lib-table  sym-lib-table
ecad/LC_meter/: #auto_saved_files#  LCR_parts.kicad_sym  LC_meter.kicad_pcb  LC_meter.kicad_prl  LC_meter.kicad_pro  LC_meter.kicad_sch  LC_meter_parts.kicad_sym  acquisition.kicad_sch  analog_front_end.kicad_sch  aquisitionkicad_sch.kicad_sch  sym-lib-table  time_analog_front_end.kicad_sch  ~LC_meter.kicad_pcb.lck  ~LC_meter.kicad_sch.lck
ecad/LC_meter.pretty/: MODULE_SC0915.kicad_mod
firmware/: -lm  ADS8328.c  ADS8328.h  CMakeLists.txt  HT16K33.c  HT16K33.h  calc_test.c  calcs.c  calcs.h  codes.c  codes.h  main.c  main.h  makefile
firmware/src/: ADC.c  ADC.h  UART.c  UART.h  calcs.c  calcs.h  main.c  main.h  running_average.c  running_average.h
new_firmware/: CMakeLists.txt  calcs.c  calcs.h  main.c  main.h  test.py  test.txt
outputs/: BOM.csv
outputs/gerbers/: LC_meter-B_Cu.gbr  LC_meter-B_Silkscreen.gbr  LC_meter-Edge_Cuts.gbr  (+2 more)
simulation/: peak_voltages.dpl  peak_voltages.sch
(+35 files in other folders)
